# tabulite

./: .gitignore  CONFIG.md  Cargo.toml  LICENSE  config.example.toml  flake.nix  justfile
.zed/: tasks.json
src/: appconfig.rs  appmenus.rs  lib.rs  main.rs  tableio.rs  tablelayer.rs  tableview.rs  tabulite.rs  titlebar.rs  utils.rs
