[package]
name = "tabulite"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
inf = { git = "https://github.com/VITObelgium/infra-rs" }
geo = { git = "https://github.com/VITObelgium/infra-rs", default-features = false, features = [
  "vector-io-csv",
  "vector-io-xlsx",
  "polars",
] }
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
anyhow = "1"
log = "0.4.29"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
dirs = "6"
polars = { version = "0.51", features = ["lazy", "regex", "strings"] }
env_logger = "0.11"

[dev-dependencies]
serial_test = "3.2"
